2025-03-11T01:09:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13778112606 # 590
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-11
* notice: last 14d: unq all: 6 8
* notice: prev accum: outdated-unq outdated-all / unq all: 215 247 / 219 252
* notice: next accum: outdated-unq outdated-all / unq all: 215 247 / 221 255
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2025-03-10]

2025-03-08T00:55:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13732129691 # 587
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-08
* notice: last 14d: unq all: 4 5
* notice: prev accum: outdated-unq outdated-all / unq all: 215 247 / 218 251
* notice: next accum: outdated-unq outdated-all / unq all: 215 247 / 219 252
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-03-07]

2025-03-07T01:09:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13711526341 # 586
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-07
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 215 247 / 216 248
* notice: next accum: outdated-unq outdated-all / unq all: 215 247 / 218 251
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2025-03-06]

2025-03-05T01:09:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13666232773 # 584