@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-03-11T01:09:46Z",
+  "timestamp" : "2025-03-12T01:08:44Z",
   "count_outdated" : 247,
   "uniques_outdated" : 215,
-  "count" : 255,
-  "uniques" : 221,
+  "count" : 256,
+  "uniques" : 222,
   "clones" : [
     {
       "timestamp": "2025-03-01T00:00:00Z",
@@ -40,6 +40,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-03-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
