@@ -1,6 +1,6 @@
 {
-  "count": 8,
-  "uniques": 6,
+  "count": 9,
+  "uniques": 7,
   "clones": [
     {
       "timestamp": "2025-03-01T00:00:00Z",
@@ -21,6 +21,11 @@
       "timestamp": "2025-03-10T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-03-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
